# fbmark

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_zh.md  fb_blit.c  fb_circle.c  fb_fill.c  fb_gradient.c  fb_julia.c  fb_line.c  fb_mandelbrot.c  fb_plasma.c  fb_rectangle.c  fb_scroll.c  fb_sierpinski.c  fb_text.c  fb_triangle.c  fb_util.h  fbmark.c  visualize.py
